@@ -67,6 +67,7 @@
 - fix stale map read.
 - automount(8) man page correction.
 - fix out of order locking in readmap.
+- include ip address in debug logging.
 
 03/09/2009 autofs-5.0.5
 -----------------------
